# foksal

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
audio/: Cargo.toml
audio/src/: core.rs  device.rs  lib.rs  mpris.rs  player_controller.rs  queue.rs  request.rs  resampler.rs  sink.rs
audio/src/mpris/: core.rs  player.rs  root.rs
client/: Cargo.toml  README.md
client/src/: blocking.rs  client.rs  error.rs  lib.rs  model.rs  protocol.rs
common/: Cargo.toml
common/src/: config.rs  lib.rs  utils.rs
common/src/net/: request.rs  response.rs
ctl/: Cargo.toml
ctl/src/: main.rs
db/: Cargo.toml
db/src/: core.rs  db_controller.rs  decoder.rs  filter.rs  fs_utils.rs  fs_watcher.rs  request.rs  song_metadata.rs  tag.rs
local/: Cargo.toml
local/src/: config.rs  controller.rs  main.rs
proxy/: Cargo.toml
proxy/src/: config.rs  controller.rs  main.rs
remote/: Cargo.toml
remote/src/: config.rs  controller.rs  main.rs
src/: audio_common.rs  config.rs  db.rs  headless_controller.rs  local_controller.rs  main.rs  main_controller.rs  player.rs  proxy_controller.rs  remote_controller.rs
src/db/: core.rs  db_controller.rs  decoder.rs  filter.rs  fs_utils.rs  fs_watcher.rs  request.rs  requests.rs  song_metadata.rs  tag.rs
src/net/: core.rs  request.rs  response.rs
src/player/: core.rs  decoder.rs  device.rs  player_controller.rs  queue.rs  request.rs  sink.rs
