[workspace]
members = ["common", "local", "proxy", "remote", "ctl"]
resolver = "3"

[workspace.package]
version = "1.0.0"
edition = "2024"

[workspace.dependencies]
anyhow = "1.0"
audioadapter = "2.0"
audioadapter-buffers = "2.0"
base64 = "0.22"
clap = { version = "4.5", features = ["derive"] }
cpal = "0.17"
crossbeam-channel = "0.5"
dirs = "6.0"
dunce = "1.0"
erased-serde = "0.4"
futures-util = "0.3"
globset = "0.4"
jwalk = "0.8"
lazy_static = "1.5"
lru = "0.16"
notify = { version = "8.2", features = ["crossbeam-channel"] }
rand = "0.10"
regex = "1.12"
rkyv = "0.8"
rubato = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
symphonia = { version = "0.5", features = ["all", "opt-simd"] }
tempfile = "3.10"
thiserror = "2.0"
tokio = { version = "1.49", features = ["full"] }
tokio-tungstenite = "0.28"
tokio-util = "0.7"
toml = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
unidecode = "0.3"

foksalcommon = { path = "common" }
foksalaudio = { path = "audio" }
foksaldb = { path = "db" }
