[workspace]
members = ["audio", "client", "common", "db", "local", "proxy", "remote", "ctl"]
resolver = "3"

[workspace.package]
version = "1.1.3"
edition = "2024"
authors = ["Antoni Zasada (alfazet)"]
keywords = ["music", "player", "remote", "foksal"]
license = "MIT"
readme = "README.md"
repository = "https://codeberg.org/alfazet/foksal"
rust-version = "1.90"

[workspace.dependencies]
anyhow = "1.0.102"
audioadapter = "2.0.0"
audioadapter-buffers = "2.0.0"
base64 = "0.22.1"
clap = { version = "4.6.0", features = ["derive"] }
cpal = "0.17.3"
crossbeam-channel = "0.5.15"
dirs = "6.0.0"
dunce = "1.0.5"
erased-serde = "0.4.10"
futures-util = "0.3.32"
globset = "0.4.18"
jwalk = "0.8.1"
lazy_static = "1.5.0"
lru = "0.16.3"
notify = { version = "8.2.0", features = ["crossbeam-channel"] }
rand = "0.10.0"
regex = "1.12.3"
rkyv = "0.8.15"
rubato = "1.0.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
symphonia = { version = "0.5.5", features = ["all", "opt-simd"] }
tempfile = "3.27.0"
thiserror = "2.0.18"
tokio = "1.50.0"
tokio-tungstenite = "0.28.0"
tokio-util = "0.7.18"
toml = "1.0.6"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
unidecode = "0.3.0"
uuid = { version = "1.22.0", features = ["v4"] }

libfoksalcommon = { path = "common", version = "1.1.3" }
libfoksalaudio = { path = "audio", version = "1.1.3" }
libfoksaldb = { path = "db", version = "1.1.3" }
libfoksalclient = { path = "client", version = "1.1.3" }

[profile.release]
lto = true
panic = "abort"
strip = true
