[package]
name = "libfoksalaudio"
description = "foksal audio library"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = { workspace = true }
audioadapter = { workspace = true }
audioadapter-buffers = { workspace = true }
cpal = { workspace = true }
crossbeam-channel = { workspace = true }
erased-serde = { workspace = true }
futures-util = { workspace = true }
rand = { workspace = true }
rkyv = { workspace = true }
rubato = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

libfoksalcommon = { workspace = true }
