[package]
name = "libfoksalclient"
description = "a client library for foksal"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

readme = "README.md"

[dependencies]
base64 = { workspace = true }
futures-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["net"] }
tokio-tungstenite = { workspace = true }
uuid = { workspace = true }
