[package]
name = "foksal-ctl"
description = "a basic cli client for foksal"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
thiserror = { workspace = true }

libfoksalclient = { workspace = true }
